--- a/nightly-playground/resources/assets/ngnix-index.html
+++ b/nightly-playground/resources/assets/ngnix-index.html
@@ -47,8 +47,8 @@
 <body>
     <div class="heading">
         <img src="https://opensearch.org/assets/img/opensearch-logo-themed.svg" alt="OpenSearch Symbol" width="500" height="50">
-        <h1>Welcome to Nightly Playgrounds!</h1>
-        <p class="content">Explore the latest nightly builds of OpenSearch and OpenSearch-Dashboards on our playgrounds. Take a peek and try out the upcoming features with just a click of the buttons below.</p>
+        <h1>Nightly Playgrounds</h1>
+        <p class="content">Explore the latest nightly builds of OpenSearch and OpenSearch-Dashboards on our playgrounds. Preview the upcoming features with just a click of the buttons below.</p>
     </div>
     <div class="button-container">
         <a href="https://playground.nightly.opensearch.org/2x" class="button button-primary">2x</a>
