--- a/nightly-playground/resources/assets/ngnix-index.html
+++ b/nightly-playground/resources/assets/ngnix-index.html
@@ -24,7 +24,7 @@
             margin-bottom: 20px;
         }
         .button-container {
-            margin-top: 20px;
+            margin-top: 50px;
         }
         .button {
             padding: 10px 20px;
@@ -51,8 +51,8 @@
         <p class="content">Explore the latest nightly builds of OpenSearch and OpenSearch-Dashboards on our playgrounds. Preview the upcoming features with just a click of the buttons below.</p>
     </div>
     <div class="button-container">
-        <a href="https://playground.nightly.opensearch.org/2x" class="button button-primary">2x</a>
-        <a href="https://playground.nightly.opensearch.org/3x" class="button button-secondary">3x</a>
+        <a href="https://playground.nightly.opensearch.org/2x" class="button button-primary">OpenSearch 2x</a>
+        <a href="https://playground.nightly.opensearch.org/3x" class="button button-secondary">OpenSearch 3x</a>
     </div>
 </body>
 </html>
